--- a/PAPE.tex
+++ b/PAPE.tex
@@ -16,7 +16,8 @@
 
 % Title setup
 \title{\textbf{Pension Economics Project}\\Mortality Forecasting and Analysis}
-\author{Jakob}
+\author{Jakob Frerichs\thanks{\texttt{jfrerichs@ethz.ch}} \and Richard Schulz\thanks{\texttt{rschul@ethz.ch}}\\
+\small Supervisor: Cheng Wan (\texttt{chengwan@ethz.ch})}
 \date{\today}
 
 \begin{document}
